--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= https://pre-commit.com/[Yelp pre-commit hook] for R code
+= http://pre-commit.com/[Yelp pre-commit hook] for R code
 This project helps you do automatic QA on your R code. Slip-ups and other issues will affect your code quality less, and you will be able to spend less time on manual formatting and testing while maintaining quality.
 
 == To use
